<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_review"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_item"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_item"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:minWidth="290dp"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/dummy_username"
        android:textSize="18sp"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_item"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/dummy_username" />
</androidx.constraintlayout.widget.ConstraintLayout>